--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,10 @@
 {
-    "manifest_version": 3,
-    "name": "Trocar Imagens",
+    "name": "Extensão Rafael Frassetto Pereira",
+    "description": "Extensão de testes",
     "version": "1.0",
-    "description": "Substitui todas as imagens da página pelo link URL fornecido.",
-    "permissions": ["activeTab"],
+    "manifest_version": 3,
+    "permissions": ["activeTab", "scripting"],
     "action": {
-      "default_popup": "popup.html",
-      "default_icon": "icon.png"
-    },
-    "background": {
-      "service_worker": "background.js"
-    },
-    "icons": {
-      "16": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
+      "default_popup": "index.html"
     }
   }
